--- a/Village_TD/Village_TD.vcxproj.filters
+++ b/Village_TD/Village_TD.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="源文件\cJSON">
       <UniqueIdentifier>{52fc5abf-59fb-43c6-b414-ef4b69bd6f13}</UniqueIdentifier>
     </Filter>
+    <Filter Include="头文件\manager">
+      <UniqueIdentifier>{94c3f7e9-77d4-46bb-85fa-d39cbfb4d12a}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -27,5 +30,13 @@
     <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="game_manager.h">
+      <Filter>头文件\manager</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="manager.h">
+      <Filter>头文件\manager</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
