--- a/Village_TD/Village_TD.vcxproj.filters
+++ b/Village_TD/Village_TD.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClInclude Include="manager.h">
       <Filter>头文件\manager</Filter>
     </ClInclude>
+    <ClInclude Include="tile.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="map.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
