--- a/Village_TD/Village_TD.vcxproj.filters
+++ b/Village_TD/Village_TD.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="map.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="route.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
