--- a/Village_TD/Village_TD.vcxproj
+++ b/Village_TD/Village_TD.vcxproj
@@ -137,10 +137,13 @@
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="config_manager.h" />
+    <ClInclude Include="enemy_type.h" />
     <ClInclude Include="manager.h" />
     <ClInclude Include="map.h" />
     <ClInclude Include="route.h" />
     <ClInclude Include="tile.h" />
+    <ClInclude Include="wave.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
