--- a/Village_TD/Village_TD.vcxproj
+++ b/Village_TD/Village_TD.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="resource_manager.h" />
     <ClInclude Include="route.h" />
     <ClInclude Include="tile.h" />
+    <ClInclude Include="vector2.h" />
     <ClInclude Include="wave.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
