add Slim and SlimKing header file

--- a/Village_TD/Village_TD.vcxproj
+++ b/Village_TD/Village_TD.vcxproj
@@ -135,11 +135,13 @@
     <ClCompile Include="..\thirdParty\cJSON\cJSON.c" />
     <ClCompile Include="game_manager.h" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="slim_enemy.h" />
     <ClCompile Include="test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="animaiton.h" />
     <ClInclude Include="config_manager.h" />
+    <ClInclude Include="enemy.h" />
     <ClInclude Include="enemy_type.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="manager.h" />
