--- a/Village_TD/Village_TD.vcxproj
+++ b/Village_TD/Village_TD.vcxproj
@@ -142,9 +142,11 @@
     <ClInclude Include="animaiton.h" />
     <ClInclude Include="config_manager.h" />
     <ClInclude Include="enemy.h" />
+    <ClInclude Include="enemy_manager.h" />
     <ClInclude Include="enemy_type.h" />
     <ClInclude Include="goblin_enemy.h" />
     <ClInclude Include="goblin_priest.h" />
+    <ClInclude Include="home_manager.h" />
     <ClInclude Include="skeleton_enemy.h" />
     <ClInclude Include="slim_king_enemy.h" />
     <ClInclude Include="timer.h" />
@@ -155,6 +157,7 @@
     <ClInclude Include="tile.h" />
     <ClInclude Include="vector2.h" />
     <ClInclude Include="wave.h" />
+    <ClInclude Include="wave_manager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
