implement inherented tower classes

--- a/Village_TD/Village_TD.vcxproj
+++ b/Village_TD/Village_TD.vcxproj
@@ -133,6 +133,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\thirdParty\cJSON\cJSON.c" />
+    <ClCompile Include="archer_tower.h" />
+    <ClCompile Include="axeman_tower.h" />
     <ClCompile Include="game_manager.h" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="slim_enemy.h" />
@@ -143,13 +145,17 @@
     <ClInclude Include="arrow_bullet.h" />
     <ClInclude Include="axe_bullet.h" />
     <ClInclude Include="bullet.h" />
+    <ClInclude Include="bullet_manager.h" />
+    <ClInclude Include="bullet_type.h" />
     <ClInclude Include="coin_manager.h" />
     <ClInclude Include="config_manager.h" />
     <ClInclude Include="enemy.h" />
     <ClInclude Include="enemy_manager.h" />
     <ClInclude Include="enemy_type.h" />
+    <ClInclude Include="facing.h" />
     <ClInclude Include="goblin_enemy.h" />
     <ClInclude Include="goblin_priest.h" />
+    <ClInclude Include="gunner_tower.h" />
     <ClInclude Include="home_manager.h" />
     <ClInclude Include="shell_bullet.h" />
     <ClInclude Include="skeleton_enemy.h" />
@@ -160,6 +166,8 @@
     <ClInclude Include="resource_manager.h" />
     <ClInclude Include="route.h" />
     <ClInclude Include="tile.h" />
+    <ClInclude Include="tower.h" />
+    <ClInclude Include="tower_type.h" />
     <ClInclude Include="vector2.h" />
     <ClInclude Include="wave.h" />
     <ClInclude Include="wave_manager.h" />
