handle coinprop and coin manager

--- a/Village_TD/Village_TD.vcxproj
+++ b/Village_TD/Village_TD.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="bullet_manager.h" />
     <ClInclude Include="bullet_type.h" />
     <ClInclude Include="coin_manager.h" />
+    <ClInclude Include="coin_prop.h" />
     <ClInclude Include="config_manager.h" />
     <ClInclude Include="enemy.h" />
     <ClInclude Include="enemy_manager.h" />
