--- a/Village_TD/Village_TD.vcxproj
+++ b/Village_TD/Village_TD.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="shell_bullet.h" />
     <ClInclude Include="skeleton_enemy.h" />
     <ClInclude Include="slim_king_enemy.h" />
+    <ClInclude Include="status_bar.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="manager.h" />
     <ClInclude Include="map.h" />
