--- a/Village_TD/Village_TD.vcxproj
+++ b/Village_TD/Village_TD.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="goblin_priest.h" />
     <ClInclude Include="gunner_tower.h" />
     <ClInclude Include="home_manager.h" />
+    <ClInclude Include="panel.h" />
     <ClInclude Include="shell_bullet.h" />
     <ClInclude Include="skeleton_enemy.h" />
     <ClInclude Include="slim_king_enemy.h" />
