--- a/Village_TD/Village_TD.vcxproj.filters
+++ b/Village_TD/Village_TD.vcxproj.filters
@@ -155,5 +155,8 @@
     <ClInclude Include="status_bar.h">
       <Filter>头文件\ui</Filter>
     </ClInclude>
+    <ClInclude Include="panel.h">
+      <Filter>头文件\ui</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
