fix issue banner is not rendering at the end

--- a/Village_TD/Village_TD.vcxproj
+++ b/Village_TD/Village_TD.vcxproj
@@ -145,6 +145,7 @@
     <ClInclude Include="animation.h" />
     <ClInclude Include="arrow_bullet.h" />
     <ClInclude Include="axe_bullet.h" />
+    <ClInclude Include="banner.h" />
     <ClInclude Include="bullet.h" />
     <ClInclude Include="bullet_manager.h" />
     <ClInclude Include="bullet_type.h" />
