--- a/Village_TD/Village_TD.vcxproj.filters
+++ b/Village_TD/Village_TD.vcxproj.filters
@@ -170,5 +170,8 @@
     <ClInclude Include="player_manager.h">
       <Filter>头文件\manager</Filter>
     </ClInclude>
+    <ClInclude Include="banner.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
