fix bug where KingSlim's config is not properly imported due to mismatch of name in config files

--- a/Village_TD/Village_TD.vcxproj
+++ b/Village_TD/Village_TD.vcxproj
@@ -164,7 +164,7 @@
     <ClInclude Include="player_manager.h" />
     <ClInclude Include="shell_bullet.h" />
     <ClInclude Include="skeleton_enemy.h" />
-    <ClInclude Include="slim_king_enemy.h" />
+    <ClInclude Include="king_slim_enemy.h" />
     <ClInclude Include="status_bar.h" />
     <ClInclude Include="timer.h" />
     <ClInclude Include="manager.h" />
