--- a/Village_TD/config.json
+++ b/Village_TD/config.json
@@ -1,96 +1,84 @@
 {
-    "basic":
-    {
-        "window_title": "村庄保卫战！",
-        "window_width": 1280,
-        "window_height": 720
-    },
-    "player": 
-    {
-        "speed": 5,
-        "normal_attack_interval": 1.5,
-        "normal_attack_damage": 15,
-        "skill_interval": 10,
-        "skill_damage": 10
-    },
-    "tower":
-    {
-        "archer":
-        {
-            "interval": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-            "damage": [5, 7, 10, 10, 10, 10, 10, 10, 10, 10],
-            "view_range": [3, 3, 3, 3, 3, 3, 3, 3, 3, 3],
-            "build_cost": [10, 10, 10, 10, 10, 10, 10, 10, 10, 10],
-            "upgrade_cost": [10, 10, 10, 10, 10, 10, 10, 10, 10]
-        },
-        "axeman":
-        {
-            "interval": [2, 2, 2, 2, 2, 2, 2, 2, 2, 2],
-            "damage": [10, 10, 10, 10, 10, 10, 10, 10, 10, 10],
-            "view_range": [4, 4, 4, 4, 4, 4, 4, 4, 4, 4],
-            "build_cost": [20, 20, 20, 20, 20, 20, 20, 20, 20, 20],
-            "upgrade_cost": [10, 10, 10, 10, 10, 10, 10, 10, 10]
-        },
-        "gunner":
-        {
-            "interval": [3, 3, 3, 3, 3, 3, 3, 3, 3, 3],
-            "damage": [20, 25, 30, 10, 10, 10, 10, 10, 10, 10],
-            "view_range": [5, 5, 5, 5, 5, 5, 5, 5, 5, 5],
-            "build_cost": [30, 30, 30, 30, 30, 30, 30, 30, 30, 30],
-            "upgrade_cost": [10, 10, 10, 10, 10, 10, 10, 10, 10]
-        }
-    },
-    "enemy": 
-    {
-        "slim":
-        {
-            "hp": 20,
-            "speed": 10,
-            "damage": 1,
-            "reward_ratio": 0.8,
-            "recover_interval": 100,
-            "recover_range": -1,
-            "recover_amount": 10
-        },
-        "king_slim":
-        {
-            "hp": 75,
-            "speed": 7.5,
-            "damage": 1,
-            "reward_ratio": 1,
-            "recover_interval": 100,
-            "recover_range": -1,
-            "recover_amount": 10
-        },
-        "skeleton":
-        {
-            "hp": 40,
-            "speed": 15,
-            "damage": 1,
-            "reward_ratio": 1,
-            "recover_interval": 100,
-            "recover_range": -1,
-            "recover_amount": 10
-        },
-        "goblin":
-        {
-            "hp": 50,
-            "speed": 15,
-            "damage": 1,
-            "reward_ratio": 1,
-            "recover_interval": 100,
-            "recover_range": -1,
-            "recover_amount": 10
-        },
-        "goblin_priest":
-        {
-            "hp": 100,
-            "speed": 7.5,
-            "damage": 1,
-            "reward_ratio": 1,
-            "recover_interval": 10,
-            "recover_range": 5,
-            "recover_amount": 10
-        }
-    }
+	"basic":	{
+		"window_width":	1280,
+		"window_height":	720,
+		"window_title":	"Village TD"
+	},
+	"player":	{
+		"speed":	5,
+		"normal_attack_interval":	1.5,
+		"normal_attack_damage":	20,
+		"skill_interval":	8,
+		"skill_damage":	999
+	},
+	"tower":	{
+		"archer":	{
+			"interval":	[1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+			"damage":	[15, 20, 25, 30, 35, 40, 10, 10, 10, 10],
+			"view_range":	[3, 3, 3, 3, 3, 3, 3, 3, 3, 3],
+			"cost":	[60, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+			"upgrade_cost":	[20, 10, 10, 10, 10, 10, 10, 10, 10]
+		},
+		"axeman":	{
+			"interval":	[2, 2, 2, 2, 2, 2, 2, 2, 2, 2],
+			"damage":	[20, 30, 40, 50, 10, 10, 10, 10, 10, 10],
+			"view_range":	[4, 4, 4, 4, 4, 4, 4, 4, 4, 4],
+			"cost":	[100, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+			"upgrade_cost":	[10, 10, 10, 10, 10, 10, 10, 10, 10]
+		},
+		"gunner":	{
+			"interval":	[5, 4, 4, 4, 3, 3, 3, 3, 3, 3],
+			"damage":	[30, 30, 40, 50, 10, 10, 10, 10, 10, 10],
+			"view_range":	[5, 5, 5, 5, 5, 5, 5, 5, 5, 5],
+			"cost":	[120, 0, 0, 0, 0, 0, 0, 0, 0, 0],
+			"upgrade_cost":	[12, 10, 10, 10, 10, 10, 10, 10, 10]
+		}
+	},
+	"enemy":	{
+		"slim":	{
+			"hp":	100,
+			"speed":	1,
+			"damage":	1,
+			"reward_ratio":	0.800000011920929,
+			"recover_interval":	100,
+			"recover_range":	-1,
+			"recover_intensity":	25
+		},
+		"king_slim":	{
+			"hp":	200,
+			"speed":	0.75,
+			"damage":	1,
+			"reward_ratio":	1,
+			"recover_interval":	100,
+			"recover_range":	-1,
+			"recover_intensity":	25
+		},
+		"skeleton":	{
+			"hp":	120,
+			"speed":	1.5,
+			"damage":	1,
+			"reward_ratio":	1,
+			"recover_interval":	100,
+			"recover_range":	-1,
+			"recover_intensity":	25
+		},
+		"goblin":	{
+			"hp":	150,
+			"speed":	1.5,
+			"damage":	1,
+			"reward_ratio":	1,
+			"recover_interval":	100,
+			"recover_range":	-1,
+			"recover_intensity":	25
+		},
+		"goblin_priest":	{
+			"hp":	250,
+			"speed":	0.75,
+			"damage":	1,
+			"reward_ratio":	1,
+			"recover_interval":	10,
+			"recover_range":	5,
+			"recover_intensity":	25
+		}
+	}
 }
