edit initial coin number

--- a/Village_TD/.vscode/settings.json
+++ b/Village_TD/.vscode/settings.json
@@ -111,6 +111,7 @@
     "xmemory": "cpp",
     "xstring": "cpp",
     "xtr1common": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "functional": "cpp"
   }
 }
