--- a/Village_TD/config.json
+++ b/Village_TD/config.json
@@ -1,7 +1,7 @@
 {
 	"basic":	{
 		"window_width":	1280,
-		"window_height":	720,
+		"window_height": 720,
 		"window_title":	"Village TD"
 	},
 	"player":	{
@@ -9,35 +9,35 @@
 		"normal_attack_interval":	1.5,
 		"normal_attack_damage":	20,
 		"skill_interval":	8,
-		"skill_damage":	999
+		"skill_damage":	20
 	},
 	"tower":	{
 		"archer":	{
-			"interval":	[1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-			"damage":	[15, 20, 25, 30, 35, 40, 10, 10, 10, 10],
+			"interval":	[1, 1, 1, 1, 0.899999976158142, 0.899999976158142, 0.800000011920929, 0.75, 0.75, 0.75],
+			"damage":	[30, 35, 40, 45, 50, 55, 55, 60, 65, 70],
 			"view_range":	[3, 3, 3, 3, 3, 3, 3, 3, 3, 3],
-			"cost":	[60, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-			"upgrade_cost":	[20, 10, 10, 10, 10, 10, 10, 10, 10]
+			"cost":	[50, 60, 60, 60, 60, 60, 60, 60, 60, 60],
+			"upgrade_cost":	[60, 60, 60, 60, 60, 60, 60, 60, 60]
 		},
 		"axeman":	{
-			"interval":	[2, 2, 2, 2, 2, 2, 2, 2, 2, 2],
-			"damage":	[20, 30, 40, 50, 10, 10, 10, 10, 10, 10],
+			"interval":	[2, 2, 2, 1.5, 1.5, 1.25, 1.25, 1, 1, 0.800000011920929],
+			"damage":	[20, 30, 40, 40, 45, 50, 55, 60, 60, 60],
 			"view_range":	[4, 4, 4, 4, 4, 4, 4, 4, 4, 4],
-			"cost":	[100, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-			"upgrade_cost":	[10, 10, 10, 10, 10, 10, 10, 10, 10]
+			"cost":	[100, 100, 100, 100, 100, 100, 100, 100, 100, 100],
+			"upgrade_cost":	[50, 50, 50, 50, 50, 50, 50, 50, 50]
 		},
 		"gunner":	{
-			"interval":	[5, 4, 4, 4, 3, 3, 3, 3, 3, 3],
-			"damage":	[30, 30, 40, 50, 10, 10, 10, 10, 10, 10],
+			"interval":	[4, 4, 4, 4, 3.5, 3, 3, 3, 2.5, 2.5],
+			"damage":	[30, 35, 40, 45, 50, 53, 57, 60, 65, 70],
 			"view_range":	[5, 5, 5, 5, 5, 5, 5, 5, 5, 5],
-			"cost":	[120, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-			"upgrade_cost":	[12, 10, 10, 10, 10, 10, 10, 10, 10]
+			"cost":	[120, 120, 120, 120, 120, 120, 120, 120, 120, 120],
+			"upgrade_cost":	[30, 30, 40, 40, 60, 60, 60, 60, 60]
 		}
 	},
 	"enemy":	{
 		"slim":	{
 			"hp":	100,
-			"speed":	1,
+			"speed":	1.25,
 			"damage":	1,
 			"reward_ratio":	0.800000011920929,
 			"recover_interval":	100,
@@ -46,7 +46,7 @@
 		},
 		"king_slim":	{
 			"hp":	200,
-			"speed":	0.75,
+			"speed":	1.25,
 			"damage":	1,
 			"reward_ratio":	1,
 			"recover_interval":	100,
@@ -55,7 +55,7 @@
 		},
 		"skeleton":	{
 			"hp":	120,
-			"speed":	1.5,
+			"speed":	1.25,
 			"damage":	1,
 			"reward_ratio":	1,
 			"recover_interval":	100,
@@ -73,12 +73,12 @@
 		},
 		"goblin_priest":	{
 			"hp":	250,
-			"speed":	0.75,
+			"speed":	1.2000000476837158,
 			"damage":	1,
 			"reward_ratio":	1,
-			"recover_interval":	10,
+			"recover_interval":	5,
 			"recover_range":	5,
-			"recover_intensity":	25
+			"recover_intensity":	100
 		}
 	}
 }
